--- a/src/meebid.css
+++ b/src/meebid.css
@@ -944,8 +944,6 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  max-width: 100%;
-  max-height: 100%;
   margin: auto;
   vertical-align: middle;
   width: auto;
@@ -953,7 +951,7 @@ body {
 }
 
 .meebidListItemImageWrapper img {
-  transition-property: width,height,transform;
+  transition-property: width,height,background-color;
   transition-duration: 0.5s;
   transition-timing-function: ease-in-out;
   border-radius: 8px; 
