--- a/src/meebid.css
+++ b/src/meebid.css
@@ -1481,6 +1481,48 @@ body {
   width: 60%;
 }
 
+.meebid .el-upload-list--picture-card .el-upload-list__item-actions.meebid-contain-switchBar{
+  height: 50%;
+}
+
+.meebid .el-upload-list__item:hover .el-upload-list__item-actions,
+.meebid .el-upload-list__item:hover .meebid-upload-list__item-switchBar {
+  opacity: 1;
+}
+
+.meebid .el-upload-list__item:hover .el-upload-list__item-actions span {
+  display: initial;
+}
+
+.meebid .meebid-upload-list__item-switchBar span {
+  cursor: pointer;
+}
+
+.meebid .el-upload-list__item-right {
+  position: absolute;
+  right: 5px;
+}
+
+.meebid .el-upload-list__item-left {
+  position: absolute;
+  left: 5px;
+}
+
+.meebid .meebid-upload-list__item-switchBar {
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  left: 0;
+  top: 50%;
+  cursor: default;
+  text-align: center;
+  color: #fff;
+  opacity: 0;
+  font-size: 20px;
+  background-color: rgba(0,0,0,.5);
+  transition: opacity .3s;
+}
+
 .meebid .el-upload-list--picture-card .el-upload-list__item-thumbnail {
   max-width: 146px;
   max-height: 146px;
