--- a/src/meebid.css
+++ b/src/meebid.css
@@ -211,6 +211,89 @@ body {
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
 }
+
+.meebid .meebidHeaderLotLabel {
+  line-height: 24px;
+}
+
+.meebid .meebidHeaderCategoryLabel{
+  line-height: 40px;
+  display: inline-block;
+}
+
+.meebid .meebidHeaderAuctionHouseNameLabel {
+  line-height: 24px;
+  font-size: 16px;
+  font-weight: bolder;
+  display: block;
+}
+
+.meebid .meebidHeaderAuctionHouseWebsiteLabel {
+  line-height: 16px;
+  font-size: 12px;
+  display: block;
+}
+
+.meebid .meebidHeaderAuctionHouseDetailWrapper {
+  display: inline-block;
+  line-height: 40px;
+}
+
+.meebid .meebidHeaderCategoryImageWrapper {
+  background-color: #efefef;
+  width: 40px;
+  height: 40px;
+  border: none;
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  vertical-align: top;
+  text-decoration: none;
+  outline: none;
+  border-radius: 8px;
+}
+
+.meebid .meebidHeaderCategoryImageWrapper img{
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  vertical-align: middle;
+  border-radius: 8px;
+}
+
+.meebid .meebidHeaderHouseImageWrapper {
+  background-color: #efefef;
+  width: 40px;
+  height: 40px;
+  border: none;
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  vertical-align: top;
+  text-decoration: none;
+  outline: none;
+  border-radius: 8px;
+}
+
+.meebid .meebidHeaderHouseImageWrapper img{
+  position: absolute;
+  display: block;
+    width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  vertical-align: middle;
+  border-radius: 8px;
+}
 /*
 @media (min-width: 768px) {
   .meebid .meebidHomeHeaderContent {
