Fix bug for layout, House Registration approval page

--- a/src/meebid.css
+++ b/src/meebid.css
@@ -1497,7 +1497,8 @@ body {
 .meebidAdminContentWrapper {
   width: 100%;
   margin-top: 71px;
-  height: 100%;
+  height: calc(100% - 71px);
+  position: fixed;
 }
 
 .meebidAdminHeader {
