Update for finished auction workflow

--- a/src/meebid.css
+++ b/src/meebid.css
@@ -2013,6 +2013,10 @@ body {
   text-overflow: ellipsis;
 }
 
+.meebid .meebidAdminAuctionManagementAuctionList:first-child .meebidAdminAuctionListAuction {
+  border-top: none !important;
+}
+
 /**
   Admin Page End
   */
