--- a/src/meebid.css
+++ b/src/meebid.css
@@ -300,6 +300,12 @@ body {
 
 .meebid .meebidHomePageListWrapper {
 }
+
+.meebid .meebidNoResultText {
+  font-size: 24px;
+  text-align: center;
+  padding-top: 20px;
+}
 /*
 @media (min-width: 768px) {
   .meebid .meebidHomeHeaderContent {
