--- a/src/meebid.css
+++ b/src/meebid.css
@@ -1794,7 +1794,7 @@ body {
 }
 
 .meebid .meebidAuctionImageContainer img, .meebid .meebidLotImageContainer img, .meebid .meebidBatchLotUploadedImageContainer img,
-.meebid .meebidApplyLotImageContainer img{
+.meebid .meebidApplyLotImageContainer img, .meebidApplyLotUserImageContainer img{
   position: absolute;
   display: block;
   top: 0;
@@ -2005,7 +2005,21 @@ body {
   line-height: 26px;
 }
 
-.meebid .meebidApplyLotImageContainer {
+.meebidApplyLotUserImageContainer {
+  width: 160px;
+  height: 160px;
+  border: none;
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  vertical-align: top;
+  text-decoration: none;
+  outline: none;
+  background: #efefef;
+}
+
+.meebid .meebidApplyLotImageContainer, .meebidApplyLotImageContainer {
   width: 80px;
   height: 80px;
   border: none;
@@ -2023,7 +2037,7 @@ body {
   line-height: 80px;
   display: inline-block;
   vertical-align: middle;
-  max-width: 130px;
+  max-width: 150px;
   max-height: 80px;
   overflow: hidden;
   white-space: nowrap;
